[tool.poetry]
name = "disspcap"
version = "1.1.1"
description = "Pcap parsing library."
authors = ["Daniel Uhricek <daniel.uhricek@gypri.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.2"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"
